style.css
/* Général */

body {
    font-family: 'Raleway', sans-serif;
    margin: 0;
}
#container {
    margin: 0 50px 50px 50px;
}
@media screen and (max-width: 768px)
{
    #container {
        margin: 0;
    }
}
ul {
    list-style-type: none;
    padding-left: 0;
}
a {
    color: black;
    text-decoration: none;
}
a:hover {
    color:#0065FC;
}
article, figure {
    box-shadow: 0px 0px 10px 0px rgb(0 0 0 / 10%);
}
.blue {
    color:#0065FC;
    font-size: 80%;
}
.grey {
    color:#d9d9d9;
    font-size: 80%;
}
.nospace {
    word-spacing: -3px;
}
/* Header */
header {
    padding-top: 26px;
}
nav {
    display: flex;
    justify-content: space-between;
}
nav img {
    margin: 15px;
    width: 96px;
}
nav ul {
    display: flex;
}
nav a {
    padding: 40px 25px;
}
nav a:hover {
    border-top: 2px solid #0065FC;
}
.active {
    color:#0065FC;
    border-top: 2px solid #0065FC;
}
@media screen and (max-width: 768px)
{
    nav {
       flex-direction: column;
       align-items: center; 
    }
    nav img {
        margin: 0 0 30px;
    }
    nav a {
        border-top: 0;
        padding: 0;
        font-size: 18px;
    }
    .active {
        border-top: 0;
    }
    nav a:hover {
        border-top: 0;
    }
    nav ul {
        width: 100%;
        margin: 0;
    }
    nav li {
        width: 50%;
        text-align: center;
        padding-bottom: 10px;
    }
    nav li:first-child {
        border-bottom: 3px solid #0065FC;
    }
    nav li:last-child {
        border-bottom: 3px solid #F2F2F2;
    }
}
/* Section Formulaire */
#formulaire {
    margin-bottom: 30px;
}
#formulaire h2 {
    margin-bottom: 10px;
}
#formulaire > p {
    margin-top: 10px;
} 
#formulaire form {
    display: flex;
    height: 50px;
    margin-bottom: 30px;
}
#formulaire form input,button {
    font-family: 'Raleway';
    font-weight: bold;
    font-size: 16px;
}
#formulaire form i {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 50px;
    background-color:#F2F2F2;
    font-size: 120%;
    border-top-left-radius: 15px;
    border-bottom-left-radius: 15px;
}
#formulaire input {
    width: 230px;
    border: 1px solid #F2F2F2;
    border-right: none;
    padding: 0 0 0 15px;
}
#formulaire form button {
    width: 130px;
    color: white;
    background-color: #0065FC;
    border-top-right-radius: 15px;
    border-bottom-right-radius: 15px;
    border: 0;
}
#formulaire div {
    display: flex;
    align-items: baseline;
}
#filtres {
    margin-bottom: 30px;
}
#filtres h3 {
    margin-right: 25px;
}
#filtres > div {
    flex-wrap: wrap;
    gap: 25px;
}
#formulaire a > i {
    display: flex;
    justify-content: center;
    color:#0065FC;
    font-size: 125%;
    width: 50px;
    height: 50px;
    background-color: #DEEBFF;
    border-radius: 50%;
    align-items: center;
    margin-right: 12px;
}
#formulaire div > a {
    display: flex;
    align-items: center;
    font-weight: bold;
    height: 46px;
    border: 2px solid #d9d9d9;
    border-radius: 25px;
    border-left: none;
    padding-right: 20px;
}
#formulaire div p {
    padding-left: 10px;
}
.info {
    display: flex;
    align-items: center;
    justify-content: center;
    color: #0065FC;
    border: 1px solid #d9d9d9;
    border-radius: 50%;
    height: 20px;
    width: 20px;
    font-family: 'Rokkitt', 'serif';
}
@media screen and (max-width: 768px)
{
    #formulaire {
        margin: 30px 20px;
    }
    #formulaire form {
        margin: 30px 0;
    }
    #formulaire h2 {
        margin: 0;
    }
    #filtres {
        flex-wrap: wrap;
    }
    #filtres > h3 {
        margin-bottom: 15px;
    }
    #filtres > div {
        gap: 13px;
    }
}

/* Main */

main {
    display: flex;
}
main section {
    background-color: #F2F2F2;
    border-radius: 20px;
}
main h2 {
    margin-top: 0;
}
main h3 {
    font-size: 18px;
}
@media screen and (max-width: 768px)
{
    main {
        flex-direction: column;
    }
}
/* Section populaire */

#populaire {
    display: flex;
    flex-direction: column;
    padding: 40px;
    margin-left: 40px;
    flex: 1;
}
#populaire > div:first-child {
    display: flex;
    justify-content: space-between;
    align-items: baseline;
}
.fa-chart-line {
    font-size: 150%;
}
#populaire article {
    min-width: 274px;
    height: 144px;
    margin-bottom: 30px;
    background-color: white;
    border-radius: 20px;
    padding: 5px;
    display: flex;
}
#populaire a:last-child article {
    margin-bottom: 0;
}
.photos_populaire {
    width: 40%;
    min-width: 40%;
    border-radius: 12px 0 0 12px;
    overflow: hidden;

}
#populaire img {
    width: 100%;
    height: 100%;
    object-fit: cover;
}
.desc_populaire {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    padding: 10px;
}
#populaire h3 {
    margin: 0;
}
#populaire p {
    margin: 0;
    padding-top: 8px;
}
@media screen and (max-width: 768px)
{
    main section {
        border-radius: 0;
    }
    #populaire {
        order: 1;
        margin-left: 0;
        padding: 40px 20px;
    }
}
/* Section Hébergements */

#hebergements {
    padding: 40px;
    flex: 2;
}
#hebergements div article {
    min-width: 180px;
    width: 30%;
    padding: 5px;
    margin-bottom: 30px;
    background-color: white;
    border-radius: 15px;
}
#hebergements p:last-child {
    font-weight: bold;
}
.galeries {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    padding-bottom: 20px;
}
.photo {
    height: 114px;
    overflow: hidden;
    border-radius: 15px 15px 0px 0px;
}
.photo img {
    width: 100%;
    height: 100%;
    object-fit: cover;
}
.description h3, .description p, .description div {
    margin: 8px;
}
#hebergements > a {
    font-size: 120%;
    font-weight: bold;
}
@media screen and (max-width: 768px)
{
    #hebergements {
        order: 2;
        background-color: white;
        padding: 40px 20px;
    }
    #hebergements div article {
        width: 100%;
    }
    .galeries {
        margin-bottom: 0;
    }
}
/* Section Activités */

#activites {
    margin: 50px 0;
    display: flex;
    flex-direction: column;
}
#activites div {
    display: flex;
}
#activites > div {
    max-height: 485px;
    justify-content: space-between;
}
#activites div > div {
    flex-direction: column;
    margin-right: 40px;
}
#activites div > div:last-child {
    margin-right: 0;
}
#activites figure {
    display: flex;
    flex-direction: column;
    height: 100%;
    margin: 20px 0;
    border-radius: 20px;
    overflow: hidden;
}
.port {
    flex: 1;
}
.fort {
    flex: 3;
}
.iles {
    flex: 2;
}
.calanques {
    flex: 1;
}
.eglise {
    flex: 9;
}
.longchamp {
    flex: 10;
}
#activites figure > img {
    flex: 5;
    overflow: hidden;
}
#activites img {
    width: 100%;
    object-fit: cover;
}
#activites figcaption {
    margin: 20px 0;
    font-weight: bold;
    font-size: 19px;
    padding-left: 15px;
}
@media screen and (max-width: 768px)
{
    #activites {
        margin: 10px 20px 30px 20px;
    }
    #activites > div {
        flex-direction: column;
        max-height: none;
    }
    #activites div > div {
        margin-right: 0;
    }
    #activites figure {
        margin: 0;
        max-height: 190px;
        margin-bottom: 20px;
    }
}

/* Footer */

@media screen and (max-width: 768px)
{
    footer {
        flex-direction: column;
        padding: 20px 40px;
    }
}

footer {
    background-color: #F2F2F2;
    display: flex;
    padding: 40px 50px 50px 50px;
}
footer div {
    margin-right: auto;
}
footer h3 {
    font-size: 21px;
}
footer li {
    margin-bottom: 10px;
    font-size: 18px;
}

